@@ -1,0 +1,25 @@
+#!/bin/sh
+# $Id$
+# elvis: bugmenot	-- Bypass compulsory web registration with bugmenot.com
+. surfraw || exit 1
+
+w3_usage_hook () {
+    cat <<EOF
+Usage: $w3_argv0 [options] [URL]...
+Description:
+  Surfraw: Bypass compulsory web registration using www.bugmenot.com
+EOF
+    w3_global_usage
+}
+
+w3_config
+w3_parse_args "$@"
+# w3_args now contains a list of arguments
+
+if test -z "$w3_args"; then
+    w3_browse_url "http://www.bugmenot.com/"
+else
+    escaped_args=`w3_url_of_arg $w3_args`
+    w3_browse_url "http://www.bugmenot.com/view/${escaped_args}"
+fi
+
