@@ -10,6 +10,7 @@ elvi.1sr.gz @mandir@/man1/aur.1sr.gz
 elvi.1sr.gz @mandir@/man1/austlii.1sr.gz
 elvi.1sr.gz @mandir@/man1/bing.1sr.gz
 elvi.1sr.gz @mandir@/man1/bbcnews.1sr.gz
+elvi.1sr.gz @mandir@/man1/bugmenot.1sr.gz
 elvi.1sr.gz @mandir@/man1/cddb.1sr.gz
 elvi.1sr.gz @mandir@/man1/cite.1sr.gz
 elvi.1sr.gz @mandir@/man1/cia.1sr.gz
