@@ -1,0 +1,2 @@
+bugmenot www.nytimes.com
+The New York Times
