@@ -1,3 +1,7 @@
+2010-02-14  James Rowe  <jnrowe@gmail.com>
+
+	* New elvi: bugmenot, thanks to Ivy Foster.
+
 2010-02-05  Ian Beckwith  <ianb@erislabs.net>
 
 	* Added options for 'aur' elvi.
